@@ -1,3 +1,9 @@
+2004-04-30  Larry Ewing  <lewing@ximian.com>
+
+	* gtk/Adjustment.custom: add an a set method for StepIncrement.
+
+	* gtk/glue/adjustment.c: add gtk_adjustment_set_step_increment.
+
 2004-05-05  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/Signal.cs : rmv Handle param to SignalCallback ctor calls.
